a1/brendan_gordon/TEST_PROGRAMS/invalidtype/serguei_nevarko/invalid3.min
var y : float;

x = 57.4;

print x;

